--- a/app/stylesheets/forumby.sass
+++ b/app/stylesheets/forumby.sass
@@ -3,6 +3,7 @@
 @import partials/inline-block
 @import partials/block
 @import partials/round-block
+@import partials/round-inline-block
 
 // Names for colors
 $forumby-grey: #edeceb
@@ -90,20 +91,51 @@ $topic-header-color: $header-color
 $topic-posts-margin: 8px
 $topic-posts-padding: 8px
 
-$topic-post-margin: 8px
-$topic-post-padding: 8px
+$topic-post-margin: 0px
+$topic-post-padding: 0px
+$topic-post-border-width: 1px
+$topic-post-border-style: solid
+$topic-post-border-color: $forumby-grey
+$topic-post-content-font-size: $blueprint-font-size
 $topic-post-text-color: $font-color
-$topic-post-background-color: $forumby-grey
+$topic-post-background-color: $forumby-background-color
 $topic-post-header-margin: 0px
 $topic-post-header-color: $header-color
 
+$topic-post-member-margin: 0px
+$topic-post-member-padding: 16px
+$topic-post-member-text-color: $font-color
+$topic-post-member-background-color: $forumby-grey
+$topic-post-member-header-margin: 0px
+$topic-post-member-header-color: $header-color
+
+$topic-post-content-margin: 0px
+$topic-post-content-padding: 16px
+$topic-post-content-text-color: $font-color
+$topic-post-content-background-color: white
+
 $post-margin: 8px
 $post-padding: 8px
-$post-font-size: $blueprint-font-size
+$post-border-width: 1px
+$post-border-style: solid
+$post-border-color: $forumby-grey
+$post-content-font-size: $blueprint-font-size
 $post-text-color: $font-color
 $post-background-color: $forumby-grey
 $post-header-margin: 0px
 $post-header-color: $header-color
+
+$post-member-margin: 8px
+$post-member-padding: 8px
+$post-member-text-color: $font-color
+$post-member-background-color: $forumby-grey
+$post-member-header-margin: 0px
+$post-member-header-color: $header-color
+
+$post-content-margin: 8px
+$post-content-padding: 8px
+$post-content-text-color: $font-color
+$post-content-background-color: white
 
 #forumby
   +block
@@ -274,10 +306,15 @@ $post-header-color: $header-color
     padding: $topic-posts-padding
 
   .topic_post
-    +round-block
+    +block
 
     margin: $topic-post-margin
     padding: $topic-post-padding
+
+    border:
+      width: $topic-post-border-width
+      style: $topic-post-border-style
+      color: $topic-post-border-color
 
     color: $topic-post-text-color
 
@@ -288,13 +325,44 @@ $post-header-color: $header-color
 
       color: $topic-post-header-color
 
+    .topic_post_member
+      +inline-block
+
+      margin: $topic-post-member-margin
+      padding: $topic-post-member-padding
+
+      color: $topic-post-member-text-color
+
+      background-color: $topic-post-member-background-color
+
+      h1, h2, h3, h4, h5, h6
+        margin: $topic-post-member-header-margin
+
+        color: $topic-post-member-header-color
+
+    article
+      +round-inline-block
+
+      margin: $topic-post-content-margin
+      padding: $topic-post-content-padding
+
+      font-size: $topic-post-content-font-size
+
+      color: $topic-post-content-text-color
+
+      background-color: $topic-post-content-background-color
+
 .post
   +round-block
 
   margin: $post-margin
   padding: $post-padding
 
-  font-size: $post-font-size
+  border:
+    width: $post-border-width
+    style: $post-border-style
+    color: $post-border-color
+
   color: $post-text-color
 
   background-color: $post-background-color
@@ -304,5 +372,29 @@ $post-header-color: $header-color
 
     color: $post-header-color
 
+  .post_member
+    +round-inline-block
+
+    margin: $post-member-margin
+    padding: $post-member-padding
+
+    color: $post-member-text-color
+
+    background-color: $post-member-background-color
+
+    h1, h2, h3, h4, h5, h6
+      margin: $post-member-header-margin
+
+      color: $post-member-header-color
+
   article
-    +block
+    +round-inline-block
+
+    margin: $post-content-margin
+    padding: $post-content-padding
+
+    font-size: $post-content-font-size
+
+    color: $post-content-text-color
+
+    background-color: $post-content-background-color
