Forums inside categories are now displayed as list items inside unordered lists.

--- a/app/views/categories/_category.html.haml
+++ b/app/views/categories/_category.html.haml
@@ -3,4 +3,4 @@
   - if category.has_description?
     %p= category.description
   - if category.has_forums?
-    .forums= forums_in category
+    %ul.forums= forums_in category
