--- a/app/stylesheets/forumby.sass
+++ b/app/stylesheets/forumby.sass
@@ -8,6 +8,7 @@
 // Names for colors
 $forumby-grey: #edeceb
 $forumby-dark-grey: $forumby-grey - #111
+$forumby-darker-grey: $forumby-grey - #333
 $forumby-blue: #91b7e6
 
 $forumby-margin: 16px
@@ -23,6 +24,11 @@ $category-text-color: $font-color
 $category-background-color: $forumby-grey
 $category-header-margin: 0px
 $category-header-color: $header-color
+$category-description-margin: 0px 0px 4px 0px
+$category-description-padding: 8px 0px 0px 4px
+$category-description-border-top-width: 1px
+$category-description-border-top-style: solid
+$category-description-border-top-color: $forumby-darker-grey
 
 $category-forums-margin: 8px
 $category-forums-padding: 8px
@@ -46,6 +52,11 @@ $forum-text-color: $font-color
 $forum-background-color: $forumby-background-color
 $forum-header-margin: 0px
 $forum-header-color: $header-color
+$forum-description-margin: 0px 0px 4px 0px
+$forum-description-padding: 8px 0px 0px 4px
+$forum-description-border-top-width: 1px
+$forum-description-border-top-style: solid
+$forum-description-border-top-color: $forumby-blue
 
 $forum-nested-forums-margin: 8px
 $forum-nested-forums-padding: 8px
@@ -167,6 +178,15 @@ $post-content-background-color: white
 
     color: $category-header-color
 
+  .description
+    margin: $category-description-margin
+    padding: $category-description-padding
+
+    border-top:
+      width: $category-description-border-top-width
+      style: $category-description-border-top-style
+      color: $category-description-border-top-color
+
   .forums
     +round-block
 
@@ -214,6 +234,15 @@ $post-content-background-color: white
     margin: $forum-header-margin
 
     color: $forum-header-color
+
+  .description
+    margin: $forum-description-margin
+    padding: $forum-description-padding
+
+    border-top:
+      width: $forum-description-border-top-width
+      style: $forum-description-border-top-style
+      color: $forum-description-border-top-color
 
   .nested-forums
     +round-block
