--- a/app/views/categories/_category.html.haml
+++ b/app/views/categories/_category.html.haml
@@ -1,6 +1,6 @@
 %section[category]
   %h2= link_to category.name, category_path(category)
   - if category.has_description?
-    %p= category.description
+    %p.description= category.description
   - if category.has_forums?
     %ul.forums= forums_in category
