--- a/app/views/forums/_forum.html.haml
+++ b/app/views/forums/_forum.html.haml
@@ -1,7 +1,7 @@
 %section[forum]
   %h2= link_to forum.name, forum_path(forum)
   - if forum.has_description?
-    %p= forum.description
+    %p.description= forum.description
   - if forum.has_nested_forums?
     .nested-forums= nested_forums_for forum
   - if forum.has_topics?
