Nested forums are now displayed as list items inside unordered lists.

--- a/app/views/forums/_forum.html.haml
+++ b/app/views/forums/_forum.html.haml
@@ -3,6 +3,6 @@
   - if forum.has_description?
     %p.description= forum.description
   - if forum.has_nested_forums?
-    .nested-forums= nested_forums_for forum
+    %ul.nested-forums= nested_forums_for forum
   - if forum.has_topics?
     .topics= topics_for forum
