--- a/app/views/forums/show.html.haml
+++ b/app/views/forums/show.html.haml
@@ -1,3 +1,6 @@
 %section#show-forum
   %h1= t 'forums.show.heading'
   = render forum
+
+- if can? :create, Topic
+  = link_button_to t('forums.topics.new.link'), new_forum_topic_path(forum)
