--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -1,13 +1,22 @@
+// Base imports
 @import blueprint/reset
-
 @import partials/base
 
+// Library imports
 @import compass
 @import blueprint
+@import blueprint/colors
 
+// Partial imports
 @import partials/body
 @import partials/form
+@import partials/link
+@import partials/colors
+@import partials/inline
+@import partials/block
+@import partials/inline-block
+@import partials/round-block
+@import partials/round-inline-block
 
-@import header
-@import forumby
-@import footer
+// Import Forumby partials
+@import forumby/application
