--- a/app/views/members/_list.html.haml
+++ b/app/views/members/_list.html.haml
@@ -2,5 +2,9 @@
   .member-portrait
     = link_to list.name, member_path(list), :class => 'name'
   .member-information
-    .topic-count= t 'members.topics.count', :count => list.topic_count
-    .post-count= t 'members.posts.count', :count => list.post_count
+    = link_to t('members.topics.count', :count => list.topic_count),
+              member_topics_path(list),
+              :class => 'topic-count'
+    = link_to t('members.posts.count', :count => list.post_count),
+              member_posts_path(list),
+              :class => 'post-count'
