--- a/app/stylesheets/forumby/_category.sass
+++ b/app/stylesheets/forumby/_category.sass
@@ -1,80 +1,105 @@
 // Category
 
 $category-margin: 8px
-$category-padding: 8px
-$category-text-color: $font-color
+$category-padding: 0px
 $category-background-color: $forumby-grey
-$category-header-margin: 0px
-$category-header-color: $header-color
-$category-description-margin: 0px 0px 4px 0px
-$category-description-padding: 8px 0px 0px 4px
-$category-description-border-top-width: 1px
-$category-description-border-top-style: solid
-$category-description-border-top-color: $forumby-darker-grey
 
-$category-forums-margin: 8px
-$category-forums-padding: 8px
-$category-forums-text-color: $font-color
-$category-forums-background-color: $forumby-dark-grey
+$category-name-margin: 0px
+$category-name-padding: 8px
+$category-name-font-size: 2em
 
-$category-forum-margin: 4px
-$category-forum-padding: 4px
-$category-forum-text-color: $font-color
-$category-forum-background-color: $forumby-dark-grey
-$category-forum-header-margin: 0px
-$category-forum-header-font-size: 12px
-$category-forum-header-color: $header-color
+$category-forums-margin: 0px
+$category-forums-padding: 0px
+
+$category-forum-margin: 0px
+$category-forum-padding: 8px
+$category-forum-background-color: #f1f4f7
+$category-forum-border-top-width: 2px
+$category-forum-border-top-style: solid
+$category-forum-border-top-color: white
+
+$category-forum-name-margin: 0px
+$category-forum-name-padding: 0px
+$category-forum-name-font-size: 1.5em
+
+$category-forum-description-margin: 0px 0px 4px 0px
+$category-forum-description-padding: 0px
+$category-forum-description-text-color: darken(white, 70%)
+$category-forum-description-font-size: 1em
+
+$category-forum-nested-forums-margin: 0px
+$category-forum-nested-forums-padding: 4px
+
+$category-forum-nested-forum-margin: 0px 4px
+$category-forum-nested-forum-padding: 4px
 
 // -- //
 
 .category
-  +round-block
+  +border-top-radius($default-border-radius)
+  +block
 
   margin: $category-margin
   padding: $category-padding
 
-  color: $category-text-color
-
   background-color: $category-background-color
 
-  h1, h2, h3, h4, h5, h6
-    margin: $category-header-margin
+  .name
+    +block
 
-    color: $category-header-color
+    margin: $category-name-margin
+    padding: $category-name-padding
 
-  .description
-    margin: $category-description-margin
-    padding: $category-description-padding
-
-    border-top:
-      width: $category-description-border-top-width
-      style: $category-description-border-top-style
-      color: $category-description-border-top-color
+    font-size: $category-name-font-size
 
   .forums
-    +round-block
+    +block
 
     margin: $category-forums-margin
     padding: $category-forums-padding
 
-    color: $category-forums-text-color
-
-    background-color: $category-forums-background-color
+  .category_forum:first-child
+    border: none
 
   .category_forum
-    +inline-block
+    +block
 
     margin: $category-forum-margin
     padding: $category-forum-padding
 
-    color: $category-forum-text-color
+    border-top:
+      width: $category-forum-border-top-width
+      style: $category-forum-border-top-style
+      color: $category-forum-border-top-color
 
     background-color: $category-forum-background-color
 
-    h1, h2, h3, h4, h5, h6
+    .name
+      +block
+
+      margin: $category-forum-name-margin
+      padding: $category-forum-name-padding
+
+      font-size: $category-forum-name-font-size
+
+    .description
+      +block
+
+      margin: $category-forum-description-margin
+      padding: $category-forum-description-padding
+
+      color: $category-forum-description-text-color
+
+      font-size: $category-forum-description-font-size
+
+    .nested-forums
+      +block
+
+      margin: $category-forum-nested-forums-margin
+      padding: $category-forum-nested-forums-padding
+
+    .nested_forum
       +inline-block
 
-      margin: $category-forum-header-margin
-
-      font-size: $category-forum-header-font-size
-      color: $category-forum-header-color
+      margin: $category-forum-nested-forum-margin
+      padding: $category-forum-nested-forum-padding
